--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon -L",
-    "test": "mocha -w ./tests/**/*.spec.js"
+    "test": "jest --watchAll"
   },
   "author": "Henry",
   "license": "ISC",
@@ -27,9 +27,10 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "jest": "^29.7.0",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.6",
-    "supertest": "^6.0.1",
+    "supertest": "^6.3.3",
     "supertest-session": "^4.1.0"
   }
 }
